# nway

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  3way.py  CONTRIBUTING.rst  Changelog  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  TODO  api.html  bayesdist.py  bayesdistance.py  conda-requirements.txt  contributing.html  explain.py  fastskymatch.py  genindex.html  getstarted.html  history.html  index.html  install.sh  installation.html  issues.html  magnitudeweights.py  match.py  matching.html  math.html  modules.html  nway-apitest.py  nway-calibrate-cutoff.py  nway-create-fake-catalogue.py  nway-create-shifted-catalogue.py  nway-explain.py  nway-write-header.py  nway.py  nway_python_api.py  nwaylib.html  (+13 more)
.github/workflows/: tests.yml
_modules/: index.html  nwaylib.html
_modules/nwaylib/: bayesdistance.html  checkupdates.html  fastskymatch.html  logger.html  (+2 more)
_sources/: getstarted.rst  getstarted.rst.txt  index.rst  installation.rst.txt  issues.rst  matching.rst  matching.rst.txt  math.rst  modules.rst  nwaylib.rst.txt  nwayml.rst  synopsis.rst
_static/: documentation_options.js
doc/: Makefile  XMM_xray_errors.fits  api.rst  conf.py  getstarted.rst  index.rst  installation.rst  matching.rst  math.rst  nway-manual.lyx  nway-references.bib  nwayml.rst  prob_prior_table.txt  synopsis.rst
examples/: Cross-catalog priors.ipynb  nway-apitest.py  nway-ml.py  standard-stars.fits
nwaylib/: __init__.py  bayesdistance.py  checkupdates.py  fastskymatch.py  logger.py  magnitudeweights.py  progress.py
tests/: bayesdistance_test.py  fastskymatch_test.py
(+22 files in other folders)
