[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "nway"
version = "4.6.0"
description = "Probabilistic Cross-Identification of Astronomical Sources"
readme = "README.rst"
url = "https://github.com/JohannesBuchner/nway/"
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "astropy", "tqdm", "healpy", "joblib", "matplotlib", "pandas"]
license = {file = "LICENSE"}
authors = [
    { name = "Johannes Buchner", email = "johannes.buchner.acad@gmx.com" },
]

[project.optional-dependencies]
test = [
    "pytest"
]
